refactor: update campaign db
