# app/api/docs/swagger.json
@@ -198,7 +198,7 @@
                     "201": {
                         "description": "Campaign created successfully",
                         "schema": {
-                            "$ref": "#/definitions/sqlc.Campaign"
+                            "$ref": "#/definitions/domain.Campaign"
                         }
                     },
                     "400": {
@@ -739,14 +739,65 @@
                 }
             }
         },
+        "domain.Campaign": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "created_by": {
+                    "type": "string"
+                },
+                "game_system": {
+                    "$ref": "#/definitions/sqlc.GameSystemEnum"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "image_url": {
+                    "type": "string"
+                },
+                "invite_code": {
+                    "type": "string"
+                },
+                "is_public": {
+                    "type": "boolean"
+                },
+                "metadata": {},
+                "number_of_players": {
+                    "type": "integer"
+                },
+                "setting": {
+                    "type": "string"
+                },
+                "setting_summary": {
+                    "type": "string"
+                },
+                "status": {
+                    "$ref": "#/definitions/sqlc.CampaignStatusEnum"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
         "domain.CampaignCreationInput": {
             "type": "object",
             "properties": {
+                "game_system": {
+                    "type": "string"
+                },
                 "image_url": {
                     "type": "string"
                 },
                 "is_public": {
                     "type": "boolean"
+                },
+                "number_of_players": {
+                    "type": "integer"
                 },
                 "setting": {
                     "type": "string"
@@ -763,10 +814,12 @@
             "type": "object",
             "properties": {
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "12345678"
                 },
                 "username": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "johndoe"
                 }
             }
         },
@@ -826,6 +879,17 @@
                 "NegativeInfinity"
             ]
         },
+        "pgtype.Int2": {
+            "type": "object",
+            "properties": {
+                "int16": {
+                    "type": "integer"
+                },
+                "valid": {
+                    "type": "boolean"
+                }
+            }
+        },
         "pgtype.Text": {
             "type": "object",
             "properties": {
@@ -860,23 +924,63 @@
                 "created_by": {
                     "type": "string"
                 },
+                "game_system": {
+                    "description": "The game system used for the campaign (e.g., dnd, pathfinder, etc.).",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/sqlc.NullGameSystemEnum"
+                        }
+                    ]
+                },
                 "id": {
                     "type": "string"
                 },
                 "image_url": {
-                    "$ref": "#/definitions/pgtype.Text"
+                    "description": "The URL of the campaign image.",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/pgtype.Text"
+                        }
+                    ]
                 },
                 "invite_code": {
-                    "$ref": "#/definitions/pgtype.Text"
+                    "description": "The invite code for the campaign.",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/pgtype.Text"
+                        }
+                    ]
                 },
                 "is_public": {
+                    "description": "Whether the campaign is available to players outside the campaign.",
                     "type": "boolean"
                 },
+                "number_of_players": {
+                    "$ref": "#/definitions/pgtype.Int2"
+                },
                 "setting": {
-                    "$ref": "#/definitions/pgtype.Text"
+                    "description": "The detailed setting of the campaign.",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/pgtype.Text"
+                        }
+                    ]
                 },
                 "setting_summary": {
-                    "$ref": "#/definitions/pgtype.Text"
+                    "description": "A summary of the campaign setting.",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/pgtype.Text"
+                        }
+                    ]
+                },
+                "status": {
+                    "description": "Lifecycle status of the campaign (e.g., planning, active, paused, etc.).",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/sqlc.CampaignStatusEnum"
+                        }
+                    ]
                 },
                 "title": {
                     "type": "string"
@@ -909,6 +1013,38 @@
                 }
             }
         },
+        "sqlc.CampaignStatusEnum": {
+            "type": "string",
+            "enum": [
+                "PLANNING",
+                "ACTIVE",
+                "PAUSED",
+                "FINISHED",
+                "ARCHIVED"
+            ],
+            "x-enum-varnames": [
+                "CampaignStatusEnumPLANNING",
+                "CampaignStatusEnumACTIVE",
+                "CampaignStatusEnumPAUSED",
+                "CampaignStatusEnumFINISHED",
+                "CampaignStatusEnumARCHIVED"
+            ]
+        },
+        "sqlc.GameSystemEnum": {
+            "type": "string",
+            "enum": [
+                "DND_5E",
+                "PATHFINDER_2E",
+                "COC_7E",
+                "CUSTOM"
+            ],
+            "x-enum-varnames": [
+                "GameSystemEnumDND5E",
+                "GameSystemEnumPATHFINDER2E",
+                "GameSystemEnumCOC7E",
+                "GameSystemEnumCUSTOM"
+            ]
+        },
         "sqlc.MemberRole": {
             "type": "string",
             "enum": [
@@ -919,6 +1055,18 @@
                 "MemberRoleGm",
                 "MemberRolePlayer"
             ]
+        },
+        "sqlc.NullGameSystemEnum": {
+            "type": "object",
+            "properties": {
+                "game_system_enum": {
+                    "$ref": "#/definitions/sqlc.GameSystemEnum"
+                },
+                "valid": {
+                    "description": "Valid is true if GameSystemEnum is not NULL",
+                    "type": "boolean"
+                }
+            }
         },
         "utils.ErrorResponse": {
             "type": "object",
